refact: rename pkg for client & common & core & pom.xml
Change-Id: Ieef748324b11b9d125dca915262f80a5954f5f98